[package]
name = "rlox"
version = "0.1.0"
authors = ["anviks"]
edition = "2024"
rust-version = "1.95"
description = "A tree-walking interpreter for the Lox language, in Rust"
license = "MIT"
repository = "https://github.com/anviks/lox"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
owo-colors = "4.3.0"
